# fate

./: Cargo.toml  README.md  wrangler.toml
.github/workflows/: deploy.yml
fate-internal-macro/: Cargo.toml
fate-internal-macro/src/: lib.rs
fate-set-commands/: Cargo.toml
fate-set-commands/src/: main.rs
migrations/: 0001_create_campaigns_table.sql  0001_init.sql  0002_create_skills_table.sql  0003_create_gm_assistants_table.sql  0004_add_main_gm_id_to_campaigns.sql  0005_add_name_to_campaigns.sql
src/: handler.rs  interaction.rs  interaction_data.rs  lib.rs  modal.rs  process.rs  response.rs  slash.rs  status_code.rs  translation.rs  validate.rs
src/campaign_new/: _0_slash.rs  _1_0_reuse.rs  _1_1_skills.rs  _1_skill.rs  _2_0_assign.rs  _2_2_mental.rs  _2_next.rs  _2_physical.rs  _3_name.rs  _3_physical.rs  _4_next.rs  _4_review.rs  _5_mental.rs  command.rs  handler.rs  mod.rs
src/campaign_new/command/: _0_slash.rs  _1_lang.rs  _1_name.rs  _2_lang.rs  _3_is_defualt_skills.rs  is_defualt_skills.rs  lang.rs  mod.rs  name.rs  slash.rs
src/database/: campaign.rs  get_skills_by_campaign_name.rs  mod.rs  skill.rs
src/database/model/: skill.rs
translations/: app.yml  campaign_new.yml  default_skill.yml  default_skills.yml  language.yml
