[package]
name = "fate"
edition = "2024"
description = "A short description of my package"
readme = "README.md"
repository = "https://github.com/fateco/fate"
license = "GPL-3.0-later"
keywords = ["discord-bot"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fate-internal-macro = { path = "./fate-internal-macro" }
worker = "0.6"
twilight-model = "0.17"
twilight-util = { version = "0.17", features = ["builder"] }
inventory = "0.3"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
rust-i18n = "3"
unicode-segmentation = "1.12"
emojis = "0.8"
ed25519-dalek = "2"
hex = "0.4"
thiserror = "2"
anyhow = "1"
serde_json = "1"
futures = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace]
members = ["fate-internal-macro", "fate-set-commands"]
